{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 29,
  "lineage": "8d998a32-06a4-c2d2-b681-75d6e60eecd2",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b107e90218672e5",
            "arn": "arn:aws:ec2:us-east-1:140709024717:instance/i-06e3e8933b60de6c6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my_template",
            "id": "i-06e3e8933b60de6c6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kamen",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09fd708228738fe6f",
            "private_dns": "ip-10-0-10-34.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.34",
            "public_ip": "54.205.23.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:140709024717:key/25bc3b1d-fb59-46c1-8698-ab0a9fae880f",
                "throughput": 0,
                "volume_id": "vol-0f32221ff8085617b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a975f32ded17139",
            "tags": {
              "Name": "my instance"
            },
            "tags_all": {
              "Name": "my instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a6ed9369f26e0b1c"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.ubuntu",
            "module.eks.aws_eks_cluster.eks",
            "module.eks.aws_eks_node_group.node-grp",
            "module.eks.aws_iam_instance_profile.worker",
            "module.eks.aws_iam_policy.autoscaler",
            "module.eks.aws_iam_role.master",
            "module.eks.aws_iam_role.worker",
            "module.eks.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSServicePolicy",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSVPCResourceController",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.eks.aws_iam_role_policy_attachment.autoscaler",
            "module.public_subnets.aws_subnet.public",
            "module.sg.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140709024717:internet-gateway/igw-0700b39569f2fe4a4",
            "id": "igw-0700b39569f2fe4a4",
            "owner_id": "140709024717",
            "tags": {
              "Name": "my gw"
            },
            "tags_all": {
              "Name": "my gw"
            },
            "vpc_id": "vpc-0d25035f012b29390"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140709024717:subnet/subnet-02a975f32ded17139",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a975f32ded17139",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "140709024717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet_1"
            },
            "tags_all": {
              "Name": "Public_Subnet_1"
            },
            "vpc_id": "vpc-0d25035f012b29390"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "public2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140709024717:subnet/subnet-02129681917979a57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02129681917979a57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "140709024717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet_2"
            },
            "tags_all": {
              "Name": "Public_Subnet_2"
            },
            "vpc_id": "vpc-0d25035f012b29390"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_able",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicsubnet_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140709024717:route-table/rtb-098ade5f4c4a50f98",
            "id": "rtb-098ade5f4c4a50f98",
            "owner_id": "140709024717",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0700b39569f2fe4a4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my rt"
            },
            "tags_all": {
              "Name": "my rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d25035f012b29390"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_able",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd41ee0174a3c64d",
            "route_table_id": "rtb-098ade5f4c4a50f98",
            "subnet_id": "subnet-02a975f32ded17139"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.public_subnets.aws_subnet.public",
            "module.route_able.aws_route_table.publicsubnet_rt",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd41ee0174a3c64d",
            "route_table_id": "rtb-098ade5f4c4a50f98",
            "subnet_id": "subnet-02a975f32ded17139"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.public_subnets.aws_subnet.public",
            "module.route_able.aws_route_table.publicsubnet_rt",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140709024717:security-group/sg-0a6ed9369f26e0b1c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6ed9369f26e0b1c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "my sg20231101205904728000000008",
            "name_prefix": "my sg",
            "owner_id": "140709024717",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d25035f012b29390"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140709024717:vpc/vpc-0d25035f012b29390",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a1b0de87a986b001",
            "default_route_table_id": "rtb-0e0bd87f5c2d16188",
            "default_security_group_id": "sg-0e63cf60d9c487334",
            "dhcp_options_id": "dopt-0cd8739ec97989b41",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d25035f012b29390",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e0bd87f5c2d16188",
            "owner_id": "140709024717",
            "tags": {
              "Name": "my vpc"
            },
            "tags_all": {
              "Name": "my vpc"
            }
          }
        }
      ]
    }
  ]
}